# cn_ga

./: README.md
ga_101/: README.md  pyproject.toml
ga_101/ga_101/: answer.py  ga_101.py  main.py
ga_101_using_deap/: README.md  pyproject.toml
ga_101_using_deap/ga_101_using_deap/: answer.py  ga_101_using_deap.py  key.pkl  main.py
ga_reinforcement_deap/: README.md  pyproject.toml
ga_reinforcement_deap/ga_reinforcement_deap/: ga_reinforcement_deap.py  main.py  mountain_car.py
