[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ga_101_using_deap"
version = "0.0.1"
dependencies = [
    "click == 8.1.7",
    "deap == 1.4.1",
    "matplotlib == 3.8.3",
    "seaborn == 0.13.2",
    "PyQt5 == 5.15.10",
]

[project.scripts]
ga_101_using_deap = "ga_101_using_deap.main:cli"

[tool.setuptools]
packages = ["ga_101_using_deap"]